# offical-website

./: .gitignore  .htaccess  CACHE_OPTIMIZATION.md  DESTINATION_MOVEMENT_ANALYSIS.md  FIXED_POSITION_ROOT_CAUSE.md  README.md  SCROLLING_FIXED_POSITION_ANALYSIS.md  add_ssh_key.sh  cloudflare-work.js  craco.config.js  deploy-api-server.sh  fix-dpkg-lock.sh  nginx-cache.conf  package-lock.json  package.json  publish-website.sh  release.sh  web-api.service
.github/workflows/: deploy-api-server.yml  deploy.yml
api/: run_web_api.sh  setup.sh  test_emotion_flow.sh
api/web_api/: Cargo.toml  OLLAMA_API.md  rag_context.txt  rag_context_v1.txt
api/web_api/src/: main.rs  ollama.rs  telegram_bot.rs
docs/: GA4_IMPLEMENTATION_GUIDE.md  GA4_TRACKING_PLAN.md  SEO_IMPLEMENTATION_GUIDE.md  SEO_OPTIMIZATION_PLAN.md  SEO_QUICK_START.md
public/: .htaccess  hero-background-video-captions.vtt  index.html  map-background-video-captions.vtt  robots.txt  room2-person-improved-example.js  room2.html  sitemap.xml
src/: App.css  App.js  index.css  index.js
src/assets/: mp4-compressor.sh
src/components/: ContactForm.css  ContactForm.js  CustomCursor.css  CustomCursor.js  FAQ.js  Footer.css  Footer.js  Header.css  Header.js  HeroSection.css  HeroSection.js  HeroSectionVideo.js  Kid1Follower.css  Kid1Follower.js  LazyScrollTracking.js  MapSectionVideo.js  ParallaxWords.css  ParallaxWords.js  Process.js  Room2Page.js  SEOHead.js  ServiceModel.css  ServiceModel.js  ServiceModelCTA.js  ServiceModelHeader.js  ServiceModelServices.js  Services.css  Services.js  SwipeTransition.css  Team.css  (+7 more)
(+40 files in other folders)
