[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
futures-util = "0.3"
sanitize-filename = "0.6.0"
mime = "0.3"